{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 302,
  "lineage": "d1463320-666a-367b-64ed-91a5ef1a7ae2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099988da9ad0b0abb",
            "associate_with_private_ip": "10.0.1.70",
            "association_id": "eipassoc-0497c7082b44b3df7",
            "domain": "vpc",
            "id": "eipalloc-099988da9ad0b0abb",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-02c3a963f8c29f7b9",
            "private_dns": "ip-10-0-1-70.eu-north-1.compute.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-13-49-94-53.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.94.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.ansible-server-interface",
            "aws_security_group.Allow_Web",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_doker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db57753d4e6a3ad9",
            "associate_with_private_ip": "10.0.1.60",
            "association_id": "eipassoc-0679d126262bafa34",
            "domain": "vpc",
            "id": "eipalloc-0db57753d4e6a3ad9",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-086d7d835599824a4",
            "private_dns": "ip-10-0-1-60.eu-north-1.compute.internal",
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-13-48-234-46.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.234.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.docker-server-interface",
            "aws_security_group.Allow_Web",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059ec877d4944ec3a",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0f2c1961bf51fc746",
            "domain": "vpc",
            "id": "eipalloc-059ec877d4944ec3a",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0dc80ecbee1e0796d",
            "private_dns": "ip-10-0-1-50.eu-north-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-50-254-52.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.254.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.jenkins-server-interface",
            "aws_security_group.Allow_Web",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:279990342162:instance/i-0f1d61bb01cf11a86",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1d61bb01cf11a86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-086d7d835599824a4"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086d7d835599824a4",
            "private_dns": "ip-10-0-1-60.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_ip": "13.48.234.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09dc0ce6f375cd23d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d66cb57bd4f4439",
            "tags": {
              "Name": "Docker-server"
            },
            "tags_all": {
              "Name": "Docker-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01355c22ddc5c1f9d"
            ]
          },
          "dependencies": [
            "aws_network_interface.docker-server-interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:279990342162:instance/i-0bbeb138302c4fa7e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbeb138302c4fa7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0dc80ecbee1e0796d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc80ecbee1e0796d",
            "private_dns": "ip-10-0-1-50.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "13.50.254.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007c0208eff61d927",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d66cb57bd4f4439",
            "tags": {
              "Name": "Jenkins-server"
            },
            "tags_all": {
              "Name": "Jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01355c22ddc5c1f9d"
            ]
          },
          "dependencies": [
            "aws_network_interface.jenkins-server-interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:279990342162:instance/i-0af5c279d3c4cb2a0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af5c279d3c4cb2a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02c3a963f8c29f7b9"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c3a963f8c29f7b9",
            "private_dns": "ip-10-0-1-70.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.70",
            "public_ip": "13.49.94.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8746756cabe82ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d66cb57bd4f4439",
            "tags": {
              "Name": "Ansible-server"
            },
            "tags_all": {
              "Name": "Ansible-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01355c22ddc5c1f9d"
            ]
          },
          "dependencies": [
            "aws_network_interface.ansible-server-interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:internet-gateway/igw-0360574bcbb7183fb",
            "id": "igw-0360574bcbb7183fb",
            "owner_id": "279990342162",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01852cb2dd3f879f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ansible-server-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:network-interface/eni-02c3a963f8c29f7b9",
            "id": "eni-02c3a963f8c29f7b9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:b0:f5:0e:0e:88",
            "owner_id": "279990342162",
            "private_ip": "10.0.1.70",
            "private_ip_list": [
              "10.0.1.70"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.70"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01355c22ddc5c1f9d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d66cb57bd4f4439"
          },
          "dependencies": [
            "aws_security_group.Allow_Web",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "docker-server-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:network-interface/eni-086d7d835599824a4",
            "id": "eni-086d7d835599824a4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6f:f4:e3:5f:70",
            "owner_id": "279990342162",
            "private_ip": "10.0.1.60",
            "private_ip_list": [
              "10.0.1.60"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.60"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01355c22ddc5c1f9d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d66cb57bd4f4439"
          },
          "dependencies": [
            "aws_security_group.Allow_Web",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins-server-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:network-interface/eni-0dc80ecbee1e0796d",
            "id": "eni-0dc80ecbee1e0796d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:8a:11:7b:09:50",
            "owner_id": "279990342162",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01355c22ddc5c1f9d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d66cb57bd4f4439"
          },
          "dependencies": [
            "aws_security_group.Allow_Web",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:route-table/rtb-0d72ba229529bfcaa",
            "id": "rtb-0d72ba229529bfcaa",
            "owner_id": "279990342162",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0360574bcbb7183fb",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0360574bcbb7183fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-01852cb2dd3f879f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0786b99e44066eb30",
            "route_table_id": "rtb-0d72ba229529bfcaa",
            "subnet_id": "subnet-05d66cb57bd4f4439"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow_Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:security-group/sg-01355c22ddc5c1f9d",
            "description": "Allow HTTP and SSH traffic via Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01355c22ddc5c1f9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "279990342162",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01852cb2dd3f879f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:subnet/subnet-05d66cb57bd4f4439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d66cb57bd4f4439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279990342162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01852cb2dd3f879f3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:279990342162:vpc/vpc-01852cb2dd3f879f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9ebbf82728ebdfd",
            "default_route_table_id": "rtb-07c226750f0afbe0e",
            "default_security_group_id": "sg-01cf41cc7ce28b7ca",
            "dhcp_options_id": "dopt-0acd57d8795145f2c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01852cb2dd3f879f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c226750f0afbe0e",
            "owner_id": "279990342162",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}